First pass at adding support for TestNG 5.6 and the supposed "future compatibility" features which rely on using a java.util.Properties map to configure testng.
git-svn-id: https://svn.apache.org/repos/asf/maven/sandbox/branches/surefire@535549 13f79535-47bb-0310-9956-ffa450edef68